# docs/swagger.yaml
@@ -1,8 +1,8 @@
 definitions:
-  main.Article:
+  models.Article:
     properties:
       author:
-        $ref: '#/definitions/main.Person'
+        $ref: '#/definitions/models.Person'
       body:
         type: string
       createdAt:
@@ -14,19 +14,19 @@ definitions:
       updatedAt:
         type: string
     type: object
-  main.Articlecreate:
+  models.Articlecreate:
     properties:
       author:
-        $ref: '#/definitions/main.Person'
+        $ref: '#/definitions/models.Person'
       body:
         type: string
       title:
         type: string
     type: object
-  main.Articleupdate:
+  models.Articleupdate:
     properties:
       author:
-        $ref: '#/definitions/main.Person'
+        $ref: '#/definitions/models.Person'
       body:
         type: string
       id:
@@ -34,18 +34,18 @@ definitions:
       title:
         type: string
     type: object
-  main.JSONErrorResponse:
+  models.JSONErrorResponse:
     properties:
       error:
         type: string
     type: object
-  main.JSONResponse:
+  models.JSONResponse:
     properties:
       data: {}
       message:
         type: string
     type: object
-  main.Person:
+  models.Person:
     properties:
       firstname:
         type: string
@@ -67,11 +67,11 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/main.JSONResponse'
+            - $ref: '#/definitions/models.JSONResponse'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/main.Article'
+                    $ref: '#/definitions/models.Article'
                   type: array
               type: object
       summary: List article
@@ -87,25 +87,23 @@ paths:
         name: article
         required: true
         schema:
-          $ref: '#/definitions/main.Articlecreate'
+          $ref: '#/definitions/models.Articlecreate'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             allOf:
-            - $ref: '#/definitions/main.JSONResponse'
+            - $ref: '#/definitions/models.JSONResponse'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/main.Article'
-                  type: array
+                  $ref: '#/definitions/models.Article'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.JSONErrorResponse'
+            $ref: '#/definitions/models.JSONErrorResponse'
       summary: Create article
       tags:
       - article
@@ -119,7 +117,7 @@ paths:
         name: article
         required: true
         schema:
-          $ref: '#/definitions/main.Articleupdate'
+          $ref: '#/definitions/models.Articleupdate'
       produces:
       - application/json
       responses:
@@ -127,21 +125,19 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/main.JSONResponse'
+            - $ref: '#/definitions/models.JSONResponse'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/main.Article'
-                  type: array
+                  $ref: '#/definitions/models.Article'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.JSONErrorResponse'
+            $ref: '#/definitions/models.JSONErrorResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.JSONErrorResponse'
+            $ref: '#/definitions/models.JSONErrorResponse'
       summary: Update article
       tags:
       - article
@@ -163,15 +159,15 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/main.JSONResponse'
+            - $ref: '#/definitions/models.JSONResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/main.Article'
+                  $ref: '#/definitions/models.Article'
               type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.JSONErrorResponse'
+            $ref: '#/definitions/models.JSONErrorResponse'
       summary: Delete article by id
       tags:
       - article
@@ -192,15 +188,15 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/main.JSONResponse'
+            - $ref: '#/definitions/models.JSONResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/main.Article'
+                  $ref: '#/definitions/models.Article'
               type: object
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.JSONErrorResponse'
+            $ref: '#/definitions/models.JSONErrorResponse'
       summary: get article by id
       tags:
       - article
